add pages, componnets and fetching poke api

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,6 +7,7 @@
     align-items: center;
     gap: 3px;
     font-size: 1.5rem;
+    flex-direction: column;
 }
 .header-container h1 {
     color: #5d648f;
