--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,4 +1,53 @@
-.container-home {
+.floating {
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
+.index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(to right top, #9d53c3, #9546be, #8c38b9, #8329b3, #7a15ae);
+  flex-direction: column;
+  gap: 30px;
+  color: #fff;
+}
+
+.container-astro {
+  height: 25em;
+  padding: 10px;
+}
+
+.container-astro img {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 576px) {
+  .container-astro {
+    height: 20em;
     width: 100vw;
-    height: 100vh;
+    padding: 10px;
+  }
+  .container-astro img {
+    width: 90%;
+    height: 100%;
+  }
 }
